WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123715
[MathML] Center of stretched curly bracket not always vertically centered
https://bugs.webkit.org/show_bug.cgi?id=123715
Summary
[MathML] Center of stretched curly bracket not always vertically centered
Martin Robinson
Reported
2013-11-03 17:01:34 PST
In some circumstances, the center piece of the stretched curly bracket is not always centered in the area of the stretched bracket. This can be observed in the new version of mathml/presentation/mo-stretch.html from 122837.
Attachments
Patch
(92.03 KB, patch)
2013-11-06 19:06 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2
(514.68 KB, application/zip)
2013-11-06 19:50 PST
,
Build Bot
no flags
Details
Patch with Mac results
(185.02 KB, patch)
2013-11-06 19:53 PST
,
Martin Robinson
bfulgham
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Frédéric Wang Nélar
Comment 1
2013-11-03 23:19:07 PST
I'm wondering if that's a consequence of
bug 119043
...
Martin Robinson
Comment 2
2013-11-03 23:53:22 PST
I've tracked this down to a regression caused by my patch. I should have a patch fixing it tomorrow.
Martin Robinson
Comment 3
2013-11-06 18:55:14 PST
***
Bug 123946
has been marked as a duplicate of this bug. ***
Martin Robinson
Comment 4
2013-11-06 18:56:03 PST
A related issue, because it causes the same assertion to fail, is that glyph pieces that directly abut are not handled properly.
Martin Robinson
Comment 5
2013-11-06 19:06:28 PST
Created
attachment 216255
[details]
Patch
Build Bot
Comment 6
2013-11-06 19:50:04 PST
Comment on
attachment 216255
[details]
Patch
Attachment 216255
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/22538073
New failing tests: mathml/presentation/mo-stretch.html
Build Bot
Comment 7
2013-11-06 19:50:06 PST
Created
attachment 216256
[details]
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Martin Robinson
Comment 8
2013-11-06 19:53:10 PST
Created
attachment 216257
[details]
Patch with Mac results
Brent Fulgham
Comment 9
2013-11-08 09:57:22 PST
Comment on
attachment 216257
[details]
Patch with Mac results r=me
Martin Robinson
Comment 10
2013-11-08 11:25:07 PST
Committed
r158931
: <
http://trac.webkit.org/changeset/158931
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug