[MathML] Center of stretched curly bracket not always vertically centered https://bugs.webkit.org/show_bug.cgi?id=123715

Reviewed by Brent Fulgham.

Source/WebCore:

* rendering/mathml/RenderMathMLOperator.cpp:
(WebCore::RenderMathMLOperator::fillWithExtensionGlyph): Update an assertion and
handle the case where two glyph pieces abut.
(WebCore::RenderMathMLOperator::paint): Do not offset the center glyph by y().

LayoutTests:

* TestExpectations: Unskip mo-stretch.html. It was skipped originally,
because MathML is changing rapidly, but we need it to test these changes.
* mathml/presentation/mo-stretch.html: Update to show stretching characteristics
of all stretchable glyphs.
* platform/gtk/mathml/presentation/mo-stretch-expected.png:
* platform/gtk/mathml/presentation/mo-stretch-expected.txt:

Canonical link: https://commits.webkit.org/142237@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158931 268f45cc-cd09-0410-ab3c-d52691b4dbfc